--- a/backend/Pubquiz.Domain/Pubquiz.Domain.csproj
+++ b/backend/Pubquiz.Domain/Pubquiz.Domain.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
         <AssemblyName>Pubquiz.Domain</AssemblyName>
         <RootNamespace>Pubquiz.Domain</RootNamespace>
-        <LangVersion>8</LangVersion>
+        <LangVersion>default</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
