--- a/backend/Pubquiz.WebApi/Pubquiz.WebApi.csproj
+++ b/backend/Pubquiz.WebApi/Pubquiz.WebApi.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
-        <LangVersion>8</LangVersion>
+        <TargetFramework>net5.0</TargetFramework>
+        <LangVersion>default</LangVersion>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
@@ -24,15 +24,15 @@
     <ItemGroup>
 
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer">
-          <Version>3.1.9</Version>
+          <Version>5.0.1</Version>
         </PackageReference>
 
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson">
-          <Version>3.1.9</Version>
+          <Version>5.0.1</Version>
         </PackageReference>
 
         <PackageReference Include="Rebus.ServiceProvider">
-          <Version>5.0.6</Version>
+          <Version>6.0.0</Version>
         </PackageReference>
         <PackageReference Include="Swashbuckle.AspNetCore">
             <Version>5.6.3</Version>
@@ -41,10 +41,10 @@
             <Version>5.6.3</Version>
         </PackageReference>
         <PackageReference Include="System.Interactive.Async">
-          <Version>4.1.1</Version>
+          <Version>5.0.0</Version>
         </PackageReference>
         <PackageReference Include="System.Text.Encoding.CodePages">
-            <Version>4.7.1</Version>
+            <Version>5.0.0</Version>
         </PackageReference>
     </ItemGroup>
 
