--- a/backend/Pubquiz.WebApi/Pubquiz.WebApi.csproj
+++ b/backend/Pubquiz.WebApi/Pubquiz.WebApi.csproj
@@ -23,16 +23,24 @@
 
     <ItemGroup>
 
-        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection">
-          <Version>9.0.0</Version>
-        </PackageReference>
-
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer">
           <Version>5.0.2</Version>
         </PackageReference>
 
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson">
           <Version>5.0.2</Version>
+        </PackageReference>
+
+        <PackageReference Include="SimpleInjector">
+          <Version>5.2.1</Version>
+        </PackageReference>
+
+        <PackageReference Include="SimpleInjector.Integration.AspNetCore">
+          <Version>5.2.0</Version>
+        </PackageReference>
+
+        <PackageReference Include="SimpleInjector.Integration.AspNetCore.Mvc">
+          <Version>5.1.1</Version>
         </PackageReference>
         <PackageReference Include="Swashbuckle.AspNetCore">
             <Version>5.6.3</Version>
