--- a/backend/Pubquiz.WebApi/Pubquiz.WebApi.csproj
+++ b/backend/Pubquiz.WebApi/Pubquiz.WebApi.csproj
@@ -31,6 +31,8 @@
           <Version>5.0.4</Version>
         </PackageReference>
 
+        <PackageReference Include="Serilog.AspNetCore" Version="4.0.0" />
+
         <PackageReference Include="SimpleInjector">
           <Version>5.3.0</Version>
         </PackageReference>
