--- a/team-frontend/package.json
+++ b/team-frontend/package.json
@@ -14,6 +14,7 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.12.1",
     "lodash": "^4.17.21",
+    "tslib": "^2.2.0",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
     "vue-i18n": "^8.24.4",
