--- a/team-frontend/package.json
+++ b/team-frontend/package.json
@@ -9,44 +9,46 @@
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.vue' --locales './src/locales/**/*.json'"
   },
   "dependencies": {
-    "@microsoft/signalr": "^5.0.5",
+    "@microsoft/signalr": "^5.0.8",
     "axios": "^0.21.1",
     "bootstrap-vue": "^2.21.2",
-    "core-js": "^3.12.1",
+    "core-js": "^3.15.2",
     "lodash": "^4.17.21",
-    "tslib": "^2.2.0",
-    "vue": "^2.6.12",
+    "tslib": "^2.3.0",
+    "vue": "^2.6.14",
     "vue-class-component": "^7.2.6",
-    "vue-i18n": "^8.24.4",
+    "vue-i18n": "^8.25.0",
+    "vue-markdown-render": "^1.1.2",
     "vue-property-decorator": "^9.1.2",
-    "vue-router": "^3.5.1",
+    "vue-router": "^3.5.2",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@intlify/vue-i18n-loader": "^1.1.0",
-    "@types/lodash": "^4.14.168",
-    "@types/node": "^14.14.44",
-    "@types/webpack": "^4.41.28",
-    "@typescript-eslint/eslint-plugin": "^4.23.0",
-    "@typescript-eslint/parser": "^4.23.0",
+    "@types/lodash": "^4.14.171",
+    "@types/markdown-it": "^12.0.3",
+    "@types/node": "^14.17.5",
+    "@types/webpack": "^4.41.30",
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
     "@vue/cli-plugin-babel": "^4.5.13",
     "@vue/cli-plugin-eslint": "^4.5.13",
     "@vue/cli-plugin-typescript": "^4.5.13",
     "@vue/cli-service": "^4.5.13",
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/eslint-config-typescript": "^7.0.0",
-    "eslint": "^7.26.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint": "^7.30.0",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-vue": "^7.9.0",
-    "ts-loader": "^8.2.0",
-    "typescript": "^4.2.4",
+    "eslint-plugin-vue": "^7.13.0",
+    "ts-loader": "^8.3.0",
+    "typescript": "^4.3.5",
     "vue-cli-plugin-axios": "0.0.4",
     "vue-cli-plugin-axios-ts": "^1.0.2",
     "vue-cli-plugin-i18n": "^1.0.1",
-    "vue-template-compiler": "^2.6.12"
+    "vue-template-compiler": "^2.6.14"
   },
   "postcss": {
     "plugins": {
