--- a/team-frontend/package.json
+++ b/team-frontend/package.json
@@ -9,12 +9,13 @@
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.vue' --locales './src/locales/**/*.json'"
   },
   "dependencies": {
-    "@microsoft/signalr": "^5.0.8",
+    "@microsoft/signalr": "^5.0.9",
     "axios": "^0.21.1",
     "bootstrap-vue": "^2.21.2",
-    "core-js": "^3.15.2",
+    "core-js": "^3.16.2",
+    "highlight.js": "^11.2.0",
     "lodash": "^4.17.21",
-    "tslib": "^2.3.0",
+    "tslib": "^2.3.1",
     "vue": "^2.6.14",
     "vue-class-component": "^7.2.6",
     "vue-i18n": "^8.25.0",
@@ -25,24 +26,24 @@
   },
   "devDependencies": {
     "@intlify/vue-i18n-loader": "^1.1.0",
-    "@types/lodash": "^4.14.171",
-    "@types/markdown-it": "^12.0.3",
-    "@types/node": "^14.17.5",
+    "@types/lodash": "^4.14.172",
+    "@types/markdown-it": "^12.2.0",
+    "@types/node": "^14.17.11",
     "@types/webpack": "^4.41.30",
-    "@typescript-eslint/eslint-plugin": "^4.28.3",
-    "@typescript-eslint/parser": "^4.28.3",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
     "@vue/cli-plugin-babel": "^4.5.13",
     "@vue/cli-plugin-eslint": "^4.5.13",
     "@vue/cli-plugin-typescript": "^4.5.13",
     "@vue/cli-service": "^4.5.13",
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/eslint-config-typescript": "^7.0.0",
-    "eslint": "^7.30.0",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint": "^7.32.0",
+    "eslint-plugin-import": "^2.24.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-vue": "^7.13.0",
+    "eslint-plugin-vue": "^7.16.0",
     "ts-loader": "^8.3.0",
     "typescript": "^4.3.5",
     "vue-cli-plugin-axios": "0.0.4",
